<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".FirstScreenFragment">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:background="@drawable/btn_add_photo"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/ed_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_rounded_edittext"
        android:hint="@string/hint_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/black_text_color"
        android:textColorHint="@color/grey_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ed_palindrome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_user" />

    <EditText
        android:id="@+id/ed_palindrome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/shape_rounded_edittext"
        android:hint="@string/hint_palindrome"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/black_text_color"
        android:textColorHint="@color/grey_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btn_check"
        app:layout_constraintEnd_toEndOf="@id/ed_name"
        app:layout_constraintStart_toStartOf="@+id/ed_name"
        app:layout_constraintTop_toBottomOf="@id/ed_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_rectangle_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_check"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="@id/ed_name"
        app:layout_constraintStart_toStartOf="@+id/ed_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_palindrome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_rectangle_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_next"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ed_name"
        app:layout_constraintStart_toStartOf="@+id/ed_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_check" />

</androidx.constraintlayout.widget.ConstraintLayout>